enable tests for common.model.ui.dialog package
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@13645 a97e2381-89e5-4abb-bab3-167db6db766c